Hello example in Python programming language added and mentioned in ChangeLog

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2024-02-01  Mert Gör  <mertgor@masscollabs.xyz>
 
+	* hello.py: hello in Python programming language
+
 	* adivb.c (main): a div b is c 
 
 	* test.txt: Test file has been added
